PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2015, PHP 5.6.15

- Date:
  . Fixed bug #70619 (DateTimeImmutable segfault). (Laruence)

- Mcrypt:
  . Fixed bug #70625 (mcrypt_encrypt() won't return data when no IV was
    specified under RC4). (Nikita)

- Mysqlnd:
  . Fixed bug #70384 (mysqli_real_query():Unknown type 245 sent by the server).
   (Andrey)
  . Fixed bug #70572 segfault in mysqlnd_connect. (Andrey, Remi)

- Opcache:
  . Fixed bug #70632 (Third one of segfault in gc_remove_from_buffer).
    (Laruence)
  . Fixed bug #70631 (Another Segfault in gc_remove_from_buffer()). (Laruence)
  . Fixed bug #70601 (Segfault in gc_remove_from_buffer()). (Laruence)
  . Fixed compatibility with Windows 10 (see also bug #70652). (Anatol)

01 Oct 2015, PHP 5.6.14

- Core:
  . Fixed bug #70370 (Bundled libtool.m4 doesn't handle FreeBSD 10 when
    building extensions). (Adam)

- CLI server:
  . Fixed bug #68291 (404 on urls with '+'). (cmb)

- DOM:
  . Fixed bug #70001 (Assigning to DOMNode::textContent does additional entity
    encoding). (cmb)

- ldap
  . Fixed bug #70465 (Bug in ldap_search() modifies LDAP_OPT_TIMELIMIT/DEREF's values). (Tyson Andre)
  . Fixed bug #69574 (ldap timeouts not enforced). (Côme Bernigaud)

- Mysqlnd:
  . Fixed bug #70456 (mysqlnd doesn't activate TCP keep-alive when connecting to
    a server). (Sergei Turchanov)

- OpenSSL:
  . Fixed bug #55259 (openssl extension does not get the DH parameters from 
    DH key resource). (Jakub Zelenka)
  . Fixed bug #70395 (Missing ARG_INFO for openssl_seal()). (cmb)
  . Fixed bug #60632 (openssl_seal fails with AES). (Jakub Zelenka)
  . Fixed bug #68312 (Lookup for openssl.cnf causes a message box). (Anatol)

- PDO:
  . Fixed bug #70389 (PDO constructor changes unrelated variables). (Laruence)

- Phar:
  . Fixed bug #69720 (Null pointer dereference in phar_get_fp_offset()). (Stas)